# bookstore

./: db.sqlite3  pyproject.toml  readme.md
.github/workflows/: build.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/models/: __init__.py  order.py
order/serializers/: order_serializers.py
order/tests/: test_order.py  test_order_serializer.py
order/tests_order/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: category_serializer.py
product/tests/: test_product.py  test_product_serializerer.py
product/tests_product/test_serializers/: test_product_serializerer.py
product/tests_product/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: product_viewset.py
